--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Adamgilman.github.com by adamgilman</title>
+    <title>Adam Gilman</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,11 +15,21 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Adamgilman.github.com</h1>
-        <p></p>
+        <h1>Adam Gilman</h1>
+        <a href="https://github.com/adamgilman">GitHub</a> <br/>
+        <a href="http://linkedin.com/in/adamgilman">LinkedIn</a><br/>
+        
+        <hr/>
+
+        <h1>Open Source</h1>
+          <a href="https://github.com/adamgilman/python-lockitron">Lockitron Python API</a><br/>
+        <hr/>
+
+        <h1>Products</h1>
+          <a href="http://www.pgatour.com/ipad/">PGA TOUR iPad Application</a> <br/>
+          <a href="http://www.cnn.com/SPECIALS/2010/worldcup/twitter.buzz/">CNN Twitter World Cup Buzz</a><br/>
 
 
-        <p class="view"><a href="https://github.com/adamgilman">View My GitHub Profile</a></p>
 
       </header>
       <section>
@@ -51,7 +61,7 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
