moving widths around and reenabling CNAME

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
         <h1>Products</h1>
           <a href="http://www.pgatour.com/ipad/">PGA TOUR iPad Application</a> <br/>
           <a href="http://www.cnn.com/SPECIALS/2010/worldcup/twitter.buzz/">CNN Twitter World Cup Buzz</a><br/>
+        <hr>
 
-
+        <h1>Small Projects</h1>
+          <a href="http://www.plainvid.com/about">PlainVid</a>
+        <hr/>
 
       </header>
       <section>
